Filled in the blanks

--- a/index.html
+++ b/index.html
@@ -9,51 +9,44 @@
     <body>
         <main class="container">
             <section class="header">
-                <h1>Your Name</h1>
+                <h1>Paxton Stokes</h1>
                 <p class="contact">
                     Email:
                     <a href="mailto:paxstokes@gmail.com"
                         >paxstokes@gmail.com</a
                     >
                     | Phone: (123) 456-7890 | LinkedIn:
-                    <a href="#">linkedin.com/in/yourname</a>
+                    <a href="https://youtu.be/3BFTio5296w">linkedin.com/in/paxtonstokes</a> <!-- the href used to be #, i think that just means its the text of the link itself? if so pretty cool. -->
                 </p>
             </section>
             <section class="section">
                 <h2>Summary</h2>
                 <p>
-                    A brief summary about yourself, your skills, and what you
-                    bring to the table. Keep it concise and impactful.
+                    Alan please add details
                 </p>
             </section>
             <section class="section">
                 <h2>Work Experience</h2>
                 <div class="item">
-                    <h3>Job Title - Company Name</h3>
-                    <p>Dates of Employment</p>
+                    <h3>Inquisitor - Ordo Mallious, Imperium of Man</h3>
+                    <p>M42</p>
                     <p>
-                        Brief description of your responsibilities and
-                        achievements in this role.
+                        Protecting the Imperium from the evils of the ruinous powers.
                     </p>
                 </div>
                 <div class="item">
-                    <h3>Job Title - Company Name</h3>
-                    <p>Dates of Employment</p>
+                    <h3>Commisar - Militarum Tempestus</h3>
+                    <p>M42</p>
                     <p>
-                        Brief description of your responsibilities and
-                        achievements in this role.
+                        Enforcing discipline and faith to the Emperor of Mankind within the Astra Militarum.
                     </p>
                 </div>
             </section>
             <div class="section">
                 <h2>Education</h2>
                 <div class="item">
-                    <h3>Degree - School Name</h3>
-                    <p>Year of Graduation</p>
-                </div>
-                <div class="item">
-                    <h3>Degree - School Name</h3>
-                    <p>Year of Graduation</p>
+                    <h3>KY High school honors curriculum - Stokes Homeschool diploma</h3>
+                    <p>2022</p>
                 </div>
             </section>
             <section class="section">
@@ -62,26 +55,25 @@
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>Python</li>
-                        <li>Team Leadership</li>
+                        <li>Minecraft server operation</li>
+                        <li>Can cook 3 minute ramen in 2:59</li>
+                        <li>Linux</li>
                     </ul>
                 </div>
             </section>
             <section class="section">
                 <h2>Projects</h2>
                 <div class="item">
-                    <h3>Project Name</h3>
+                    <h3>Modded minecraft server</h3>
                     <p>
-                        Brief description of the project, the technologies used,
-                        and your role in the project.
+                        A multiplayer minecraft server on version 1.20.1 with the fabric loader and a few mods. Running on a raspberry pi
+                        on raspi-os (debian-based distro) with the server console running in tmux. As of writing the server is still running.
                     </p>
                 </div>
                 <div class="item">
-                    <h3>Project Name</h3>
+                    <h3>Website semantic HTML migration</h3>
                     <p>
-                        Brief description of the project, the technologies used,
-                        and your role in the project.
+                        Updated a pre-existing HTML page to use semantic tags. (yes the codeyou assignment)
                     </p>
                 </div>
             </section>
